# maoi_labs

./: .gitignore  CMakeLists.txt
include/ui/: Gui.h
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: main.cpp
src/ui/: Gui.cpp
